cargo-features = ["strip"]
[package]
name = "acrobatics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font8x8 = "0.3.1"
rand = "0.8.4"
message_passing = { path = "../message_passing"}
process-memory = "0.4.0"
sysinfo = "0.20.0"
nix = "0.22.0"

[profile.release]
strip = "true"